# BDBL-Scheduling

./: .pre-commit-config.yaml  Class_League.py  Class_Schedule.py  README.md  client_secret_example.json  gsheets.py  league_analysis.py  main.py  pyproject.toml  requirements.txt  scheduling.py
src/: import_league.py
src/league_structure/: club.py  court_slot.py  date.py  dates.py  fixture.py  fixture_court_slot.py  league.py  team.py
tests/: test_import_league.py  test_main.py
